# bank-widget

./: .env.example  README.md  Readme.md  pyproject.toml  readme.md  requirements.txt
htmlcov/: index.html
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  transactions.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_transactions.py  test_utils.py  test_widget.py
